Finalização do Layout

--- a/psn-store/src/app/pages/home/home.component.html
+++ b/psn-store/src/app/pages/home/home.component.html
@@ -1,3 +1,25 @@
 <div class="container">
-  <app-card></app-card>
+  <app-card
+    price="R$ 59,99"
+    imageCover="../../../assets/images/ac-cover.jpg"
+    showPanel="false"
+    platforms="DIGITAL"
+    label="Exclusive"
+  ></app-card>
+  <app-card
+    price="R$ 259,99"
+    imageCover="../../../assets/images/bt-1.jpg"
+    showPanel="true"
+    platforms="DIGITAL PS5 PS4"
+    label="New Game"
+  ></app-card>
+  <app-card
+    price="R$ 159,99"
+    imageCover="../../../assets/images/bt-4.jpg"
+    showPanel="true"
+    platforms="DIGITAL PS4 PS3"
+    label="Exclusive"
+    originalPricing="R$ 259,99"
+    inPromo="true"
+  ></app-card>
 </div>
