--- a/psn-store/src/app/components/card/card.component.html
+++ b/psn-store/src/app/components/card/card.component.html
@@ -1,1 +1,15 @@
-<p>card works!</p>
+<a href="#" class="container">
+
+  <img
+    class="container__img"
+    [src]=[imageCover]
+    alt=""
+  >
+  <app-card-label gameLabel="{{label}}" switch='{{showPanel}}'></app-card-label>
+  <app-card-pricing
+    gamePrice="{{price}}"
+    gameType="{{platforms}}"
+    gameOriginalPrice="{{originalPricing}}"
+    inPromo="{{inPromo}}"
+    ></app-card-pricing>
+</a>
