--- a/psn-store/src/app/components/menu-bar/menu-bar.component.html
+++ b/psn-store/src/app/components/menu-bar/menu-bar.component.html
@@ -7,32 +7,5 @@
       width="140px"
       height="32px">
   </div>
-  <div class="container__items">
-    <ul class="container__items__list">
-      <li class="container__items__list__item">
-        <a
-          class="container__items__list__item__link"
-          href="{{environment.instagram}}"
-          target="_blank">
-          Instagram
-        </a>
-      </li>
-      <li class="container__items__list__item">
-        <a
-          class="container__items__list__item__link"
-          href="{{environment.linkedin}}"
-          target="_blank">
-          LinkedIn
-        </a>
-      </li>
-      <li class="container__items__list__item">
-        <a
-          class="container__items__list__item__link"
-          href="{{environment.github}}"
-          target="_blank">
-          Github
-        </a>
-      </li>
-    </ul>
-  </div>
+  <app-menu-bar-items></app-menu-bar-items>
 </div>
