Inicio de atualização da PSN

--- a/psn-store/src/styles.scss
+++ b/psn-store/src/styles.scss
@@ -11,6 +11,5 @@
 }
 
 body {
-  background: $base-blue;
-  background: linear-gradient(90deg, $base-blue 0%, $second-blue 35%, $second-blue 100%);
+  background: #fff
 }
