--- a/psn-store/src/app/pages/home/home.component.html
+++ b/psn-store/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-card
+  <!-- <app-card
     price="R$ 59,99"
     imageCover="../../../assets/images/ac-cover.jpg"
     showPanel="false"
@@ -21,5 +21,7 @@
     label="Exclusive"
     originalPricing="R$ 259,99"
     inPromo="true"
-  ></app-card>
+  ></app-card> -->
+
+  
 </div>
