Estilização dos Cards

--- a/psn-store/src/app/components/card/card.component.scss
+++ b/psn-store/src/app/components/card/card.component.scss
@@ -1,11 +1,10 @@
 .container {
   position: relative;
 
-  border: 1px solid #3e4e57;
   border-radius: 6px;
 
-  width: 350px;
-  height: 500px;
+  width: 324px;
+  height: 324px;
 
   display: flex;
   overflow: hidden;
@@ -18,6 +17,6 @@
   }
 
   &__img:hover{
-    transform: scale(1.05);
+    filter: brightness(90%);
   }
 }
