--- a/psn-store/src/app/pages/home/home.component.html
+++ b/psn-store/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="home">
   <!-- <app-card
     price="R$ 59,99"
     imageCover="../../../assets/images/ac-cover.jpg"
@@ -24,4 +24,11 @@
   ></app-card> -->
 
   <app-hero></app-hero>
+  <div class="home__games">
+    <div class="home__games__new">
+      <app-card imageCover="{{environment.games['Spider-Man 2']}}"></app-card>
+      <app-card imageCover="{{environment.games['Elden Ring']}}"></app-card>
+      <app-card imageCover="{{environment.games['Call of Duty']}}"></app-card>
+    </div>
+  </div>
 </div>
