--- a/psn-store/src/app/pages/home/home.component.scss
+++ b/psn-store/src/app/pages/home/home.component.scss
@@ -1,8 +1,23 @@
-.container {
+.home {
   width: 100%;
 
   display: flex;
   justify-content: space-around;
   align-items: baseline;
   flex-wrap: wrap;
+
+  &__games {
+    padding-top: 48px;
+    width: 100%;
+
+    &__new {
+      display: flex;
+      justify-content: space-between;
+
+      margin: 0 104px 16px;
+    }
+
+  }
+
+
 }
