--- a/psn-store/src/app/pages/home/home.component.html
+++ b/psn-store/src/app/pages/home/home.component.html
@@ -24,11 +24,5 @@
   ></app-card> -->
 
   <app-hero></app-hero>
-  <div class="home__games">
-    <div class="home__games__new">
-      <app-card imageCover="{{environment.games['Spider-Man 2']}}"></app-card>
-      <app-card imageCover="{{environment.games['Elden Ring']}}"></app-card>
-      <app-card imageCover="{{environment.games['Call of Duty']}}"></app-card>
-    </div>
-  </div>
+  <app-games-list></app-games-list>
 </div>
